add github pages config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dmytro-dima.github.io/react-search-car",
+  "homepage": "https://dmytro-dima.github.io/gh-pages-react-app/",
   "name": "new",
   "version": "0.1.0",
   "private": true,
@@ -33,7 +33,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "yarn run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
